update team page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
 	<title>Planet Gaia Derinkuyu</title>
 
+
 	<link rel="stylesheet" href="Styles/style_main.css">
 	<link rel="stylesheet" href="Styles/style_header.css">
 	<link rel="stylesheet" href="Styles/style_sitewide.css">
@@ -29,6 +30,7 @@
 
 	</script>
 	<link rel="stylesheet" href="Styles/style_home.css">
+	<link rel="stylesheet" href="Styles/style_team.css">
 
 
 	<style>
@@ -70,9 +72,10 @@
 	<div id='TopBar' class='top_bar'>
 
 		<span class="logo_segment">
-			<a href="/"><img src="https://raw.githack.com/RaSan147/pyrobox/main/assets/favicon.png" alt="Logo"
-					class="logo_img"></a>
-			<span class="logo_text">Planet Gaia Derinkuyu</span>
+			<a href="/">
+				<!-- <img src="https://raw.githack.com/RaSan147/pyrobox/main/assets/favicon.png" alt="Logo" class="logo_img"> -->
+				<span class="logo_text">Planet Gaia Derinkuyu</span>
+			</a>
 		</span>
 
 		<span id="nav-bar">
@@ -302,7 +305,7 @@
 			</div>
 		</div>
 
-		
+
 		<div id="solar_system-page" class="page">
 			<div class="heading">
 				<div class="heading-content">
@@ -465,7 +468,7 @@
 			</div>
 		</div>
 
-		
+
 		<div id="planet-page" class="page">
 			<div class="heading">
 				<div class="heading-content">
@@ -628,7 +631,7 @@
 			</div>
 		</div>
 
-		
+
 		<div id="life-page" class="page">
 			<div class="heading">
 				<div class="heading-content">
@@ -790,7 +793,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div id="about-page" class="page">
 			<div class="heading">
 				<div class="heading-content">
@@ -953,7 +956,7 @@
 			</div>
 		</div>
 
-		
+
 		<div id="team-page" class="page">
 			<div class="heading">
 				<div class="heading-content">
@@ -977,134 +980,74 @@
 
 			<div class="body-content">
 				<div class="body-content-text center">
-
-					<!-- Introduction -->
-
-					<div id="intro-segment">
-						<h2 id="intro-segment-header">Introduction:</h2>
-						<p id="intro-segment-text">
-							Gaia Derinkuyu is a hollowed planet filled with liquid water and surface is covered with
-							Volcanic
-							rocks and Ice. Due to the lack of atmosphere and extreme thin air life may seem impossible
-							here, but the nature works in a mysterious way under the shed.
-
-							<br>
-							Long distance from its star <a href="/Solar-System.html" style="color: goldenrod;">"Sidus
-								Ignis"</a> keeps it cold while the Volcanic surface carry the heat to the deep water
-							body, maintaining the temperature of the planet <i>(300°C at day to -38°C at night)</i>. The
-							planet is also known for its rich minerals and unique combination magnetic and centrifugal
-							force which gives it's interior a unique shape.
-						</p>
+					<div class="team">
+						<div class="member-card">
+							<div class="member-card-top"></div>
+							<div class="member-card-body">
+								<img class="member-image" src="/WebAsset/arko.webp" />
+							</div>
+							<div class="member-card-bottom">
+								<div class="member-name">Arka</div>
+								<div class="member-email">parvez6878@gmail.com</div>
+								<div class="member-role">Developer</div>
+							</div>
+						</div>
+						<div class="member-card">
+							<div class="member-card-top"></div>
+							<div class="member-card-body">
+								<img class="member-image" src="/WebAsset/atik.webp" />
+							</div>
+							<div class="member-card-bottom">
+								<div class="member-name">Atik</div>
+								<div class="member-email">atik@gmail.com</div>
+								<div class="member-role">Geology Researcher</div>
+							</div>
+						</div>
+						<div class="member-card">
+							<div class="member-card-top"></div>
+							<div class="member-card-body">
+								<img class="member-image" src="/WebAsset/Ratul.webp" />
+							</div>
+							<div class="member-card-bottom">
+								<div class="member-name">Ratul</div>
+								<div class="member-email">wwwqweasd147@gmail.com</div>
+								<div class="member-role">Team Lead</div>
+							</div>
+						</div>
+						<div class="member-card">
+							<div class="member-card-top"></div>
+							<div class="member-card-body">
+								<img class="member-image" src="/WebAsset/mehedi.webp" />
+							</div>
+							<div class="member-card-bottom">
+								<div class="member-name">Mehedi Hasan</div>
+								<div class="member-email">mhbhuiyan2004@gmail.com</div>
+								<div class="member-role">Biology Researcher</div>
+							</div>
+						</div>
+						<div class="member-card">
+							<div class="member-card-top"></div>
+							<div class="member-card-body">
+								<img class="member-image" src="/WebAsset/Roudro.webp" />
+							</div>
+							<div class="member-card-bottom">
+								<div class="member-name">Roudra Sarker</div>
+								<div class="member-email">kasroudrakrd@gmail.com</div>
+								<div class="member-role">Web Developer</div>
+							</div>
+						</div>
+						<div class="member-card">
+							<div class="member-card-top"></div>
+							<div class="member-card-body">
+								<img class="member-image" src="/WebAsset/ema.webp" />
+							</div>
+							<div class="member-card-bottom">
+								<div class="member-name">Fatematuz Zohora</div>
+								<div class="member-email">zohura2003@gmail.com</div>
+								<div class="member-role">Developer</div>
+							</div>
+						</div>
 					</div>
-
-					<!-- Namesake -->
-
-					<div id="namesake-segment">
-						<h2 id="namesake-segment-header">Namesake:</h2>
-						<p id="namesake-segment-text">
-							Gaia Derinkuyu is a name that combines two significant elements:
-							<br><br>
-							<b>Gaia:</b> This is a Greek goddess of the Earth. In Greek mythology, Gaia is considered
-							the mother of all living things. Her name is often associated with the Earth itself, its
-							natural processes, and its nurturing qualities.
-							<br>
-							<b>Derinkuyu:</b> This is a Turkish word meaning "deep well." It refers to the underground
-							city of Derinkuyu in Cappadocia, Turkey. This ancient city is known for its extensive
-							network of tunnels, chambers, and underground structures, which were used as a refuge and a
-							place of habitation.
-							<br><br>
-							Together, the name Gaia Derinkuyu reflects the planet's connection to the life and the
-							darkness of its hidden depths.
-						</p>
-					</div>
-
-					<!-- Size and Distance -->
-
-					<div id="size-distance">
-						<h2 id="size-distance-header">Size and Distance:</h2>
-						<p id="size-distance-text">
-							Gaia Derinkuyu is a relatively small planet compared to others in the solar system. It has
-							a diameter of approximately <b>6,792 kilometers (4,220 miles)</b>, making it slightly larger
-							than
-							Mercury.
-							<br>
-							The planet is located at a distance of about 0.72 astronomical units (AU) from its
-							star, Sidus Ignis. This distance places it within the habitable zone of the star, where
-							conditions are suitable for the presence of liquid water.
-							<br><br>
-							Want to dig up some more information? <a href="/Solar-System.html">Check out the planet
-								structure
-								<span class="fa fa-light fa-person-digging">⛏️</span>
-							</a>
-						</p>
-
-						<iframe
-							src="https://solarsystem.nasa.gov/gltf_embed/2369/?height=450&amp;amp;rotate=true&amp;amp;cc=true&amp;amp;fs=true&amp;amp;target=&amp;amp;orbit="
-							title="" class="smd-iframe-iframe margin-left-auto margin-right-auto border-0"
-							allow="fullscreen" frameborder="0" width="100%" height="450">Unable to render the provided
-							source</iframe>
-
-					</div>
-
-					<!-- Potential for Life -->
-
-					<div id="life-expectancy">
-						<h2 id="life-expectancy-header">Potential for Life:</h2>
-						<p id="life-expectancy-text">
-							Despite its harsh conditions, Gaia Derinkuyu has been the subject of scientific interest due
-							to its potential for harboring life. The presence of liquid water, a stable temperature
-							range, and a variety of minerals make it a promising candidate for life to exist.
-							<br>
-							The bacteria like living planted their roots in the deep water body and the volcanic rocks.
-							The microorganisms are known to survive in extreme conditions and may have adapted to the
-							unique environment of Gaia Derinkuyu and using <b>Chemosynthesis</b> to produce energy and
-							survive.
-							<br><br>
-							To know more about the life and ecosystem of Gaia Derinkuyu, <a
-								href="/Life-on-planet.html">Bring in the microscope...
-								<!-- <i class="fa-sharp fa-regular fa-microscope"></i> -->
-								<span class="fa fa-regular fa-microscope">🔬</span>
-							</a>
-						</p>
-					</div>
-
-					<!-- Orbit and Rotation -->
-
-					<div id="orbit-rotation">
-						<h2 id="orbit-rotation-header">Orbit and Rotation:</h2>
-						<p id="orbit-rotation-text">
-							Gaia Derinkuyu has an elliptical orbit around its star, Sidus Ignis. The planet takes
-							approximately 225 Earth days to complete one orbit, resulting in a year that is shorter than
-							that of Earth.
-							<br>
-							The planet also has a slow rotation on its axis, taking about 30 hours to complete one full
-							rotation. This slow rotation contributes to the extreme temperature variations between day
-							and night on the planet.
-						</p>
-
-						<iframe
-							src="https://eyes.nasa.gov/apps/solar-system/#/mercury?featured=false&detailPanel=false&logo=false&search=false&shareButton=false&menu=false&collapseSettingsOptions=true"
-							allowfullscreen frameborder="0" width="100%" height="500px"></iframe>
-
-					</div>
-
-					<!-- Learn More -->
-					<div id="learn-more">
-						<h2 id="learn-more-header">Want to deep dive?</h2>
-						<p id="learn-more-text">
-							Want to learn about Life and Ecosystem?
-							<a href="/Life-on-planet.html">Check out here...
-								<span class="fa fa-solid fa-bacteria">🦠</span>
-							</a>
-
-							<br><br>
-							Or, more interested about the planet itself?
-							<a href="/Planet-Gaia-Derinkuyu.html">Lets find out... <span
-									class="fa fa-light fa-solar-system">🌐</span></a>
-
-						</p>
-					</div>
-
 				</div>
 			</div>
 
