--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 	<link rel="stylesheet" href="Styles/style_sitewide.css">
 </head>
 
+
 <body>
 	<script>
-		var PAGE_TYPE = 'home';
-		// get query string and get value of ?page= if exists
-		var query = window.location.search.substring(1);
-		if (query) {
-			var vars = query.split("&");
-			for (var i = 0; i < vars.length; i++) {
-				var pair = vars[i].split("=");
-				if (pair[0] == 'page') {
-					PAGE_TYPE = pair[1];
-				}
-			}
+		const types = {
+			'/': 'home',
+			'/index.html': 'home',
+			'/Solar-System.html': 'solar_system',
+			'/Planet-Gaia-Derinkuyu.html': 'planet',
+			'/Life-on-planet.html': 'life',
+			'/About.html': 'about',
+			'/Team.html': 'team',
 		}
+		var PAGE_TYPE = types[window.location.pathname];
 
 	</script>
 	<link rel="stylesheet" href="Styles/style_home.css">
 	<link rel="stylesheet" href="Styles/style_team.css">
+	<link rel="stylesheet" href="Styles/style_about.css">
 
 
 	<style>
@@ -87,7 +87,7 @@
 
 			<a href="/Life-on-planet.html" class="nav-bar-link" data-page-type="life">Life on Planet</a>
 
-			<a href="/About.html" class="nav-bar-link" data-page-type="about">About</a>
+			<a href="/About.html" class="nav-bar-link" data-page-type="about">About Challange</a>
 
 			<a href="/Team.html" class="nav-bar-link" data-page-type="team">Team</a>
 
@@ -798,17 +798,17 @@
 			<div class="heading">
 				<div class="heading-content">
 					<div class="heading-left heading-side">
-						<img src="/WebAsset/planet.webp" alt="Planet" class="spin planet-spin">
+						<img src="/WebAsset/space-app.webp" alt="Planet" class="space-logo">
 
 					</div>
 
 					<div class="heading-right heading-side">
 						<div class="heading-header">
-							<h1 class="heading-header-text">Planet Gaia Derinkuyu</h1>
+							<h1 class="heading-header-text">Beyond Sunlight: <br> An Aquatic Chemosynthetic World</h1>
 						</div>
 
 						<div class="heading-subheader">
-							<p class="heading-subheader-text">- The life hidden within the dark</p>
+							<p class="heading-subheader-text">- 2024 NASA Space Apps Challenge</p>
 						</div>
 
 					</div>
@@ -817,133 +817,6 @@
 
 			<div class="body-content">
 				<div class="body-content-text center">
-
-					<!-- Introduction -->
-
-					<div id="intro-segment">
-						<h2 id="intro-segment-header">Introduction:</h2>
-						<p id="intro-segment-text">
-							Gaia Derinkuyu is a hollowed planet filled with liquid water and surface is covered with
-							Volcanic
-							rocks and Ice. Due to the lack of atmosphere and extreme thin air life may seem impossible
-							here, but the nature works in a mysterious way under the shed.
-
-							<br>
-							Long distance from its star <a href="/Solar-System.html" style="color: goldenrod;">"Sidus
-								Ignis"</a> keeps it cold while the Volcanic surface carry the heat to the deep water
-							body, maintaining the temperature of the planet <i>(300°C at day to -38°C at night)</i>. The
-							planet is also known for its rich minerals and unique combination magnetic and centrifugal
-							force which gives it's interior a unique shape.
-						</p>
-					</div>
-
-					<!-- Namesake -->
-
-					<div id="namesake-segment">
-						<h2 id="namesake-segment-header">Namesake:</h2>
-						<p id="namesake-segment-text">
-							Gaia Derinkuyu is a name that combines two significant elements:
-							<br><br>
-							<b>Gaia:</b> This is a Greek goddess of the Earth. In Greek mythology, Gaia is considered
-							the mother of all living things. Her name is often associated with the Earth itself, its
-							natural processes, and its nurturing qualities.
-							<br>
-							<b>Derinkuyu:</b> This is a Turkish word meaning "deep well." It refers to the underground
-							city of Derinkuyu in Cappadocia, Turkey. This ancient city is known for its extensive
-							network of tunnels, chambers, and underground structures, which were used as a refuge and a
-							place of habitation.
-							<br><br>
-							Together, the name Gaia Derinkuyu reflects the planet's connection to the life and the
-							darkness of its hidden depths.
-						</p>
-					</div>
-
-					<!-- Size and Distance -->
-
-					<div id="size-distance">
-						<h2 id="size-distance-header">Size and Distance:</h2>
-						<p id="size-distance-text">
-							Gaia Derinkuyu is a relatively small planet compared to others in the solar system. It has
-							a diameter of approximately <b>6,792 kilometers (4,220 miles)</b>, making it slightly larger
-							than
-							Mercury.
-							<br>
-							The planet is located at a distance of about 0.72 astronomical units (AU) from its
-							star, Sidus Ignis. This distance places it within the habitable zone of the star, where
-							conditions are suitable for the presence of liquid water.
-							<br><br>
-							Want to dig up some more information? <a href="/Solar-System.html">Check out the planet
-								structure
-								<span class="fa fa-light fa-person-digging">⛏️</span>
-							</a>
-						</p>
-
-						<iframe
-							src="https://solarsystem.nasa.gov/gltf_embed/2369/?height=450&amp;amp;rotate=true&amp;amp;cc=true&amp;amp;fs=true&amp;amp;target=&amp;amp;orbit="
-							title="" class="smd-iframe-iframe margin-left-auto margin-right-auto border-0"
-							allow="fullscreen" frameborder="0" width="100%" height="450">Unable to render the provided
-							source</iframe>
-
-					</div>
-
-					<!-- Potential for Life -->
-
-					<div id="life-expectancy">
-						<h2 id="life-expectancy-header">Potential for Life:</h2>
-						<p id="life-expectancy-text">
-							Despite its harsh conditions, Gaia Derinkuyu has been the subject of scientific interest due
-							to its potential for harboring life. The presence of liquid water, a stable temperature
-							range, and a variety of minerals make it a promising candidate for life to exist.
-							<br>
-							The bacteria like living planted their roots in the deep water body and the volcanic rocks.
-							The microorganisms are known to survive in extreme conditions and may have adapted to the
-							unique environment of Gaia Derinkuyu and using <b>Chemosynthesis</b> to produce energy and
-							survive.
-							<br><br>
-							To know more about the life and ecosystem of Gaia Derinkuyu, <a
-								href="/Life-on-planet.html">Bring in the microscope...
-								<!-- <i class="fa-sharp fa-regular fa-microscope"></i> -->
-								<span class="fa fa-regular fa-microscope">🔬</span>
-							</a>
-						</p>
-					</div>
-
-					<!-- Orbit and Rotation -->
-
-					<div id="orbit-rotation">
-						<h2 id="orbit-rotation-header">Orbit and Rotation:</h2>
-						<p id="orbit-rotation-text">
-							Gaia Derinkuyu has an elliptical orbit around its star, Sidus Ignis. The planet takes
-							approximately 225 Earth days to complete one orbit, resulting in a year that is shorter than
-							that of Earth.
-							<br>
-							The planet also has a slow rotation on its axis, taking about 30 hours to complete one full
-							rotation. This slow rotation contributes to the extreme temperature variations between day
-							and night on the planet.
-						</p>
-
-						<iframe
-							src="https://eyes.nasa.gov/apps/solar-system/#/mercury?featured=false&detailPanel=false&logo=false&search=false&shareButton=false&menu=false&collapseSettingsOptions=true"
-							allowfullscreen frameborder="0" width="100%" height="500px"></iframe>
-
-					</div>
-
-					<!-- Learn More -->
-					<div id="learn-more">
-						<h2 id="learn-more-header">Want to deep dive?</h2>
-						<p id="learn-more-text">
-							Want to learn about Life and Ecosystem?
-							<a href="/Life-on-planet.html">Check out here...
-								<span class="fa fa-solid fa-bacteria">🦠</span>
-							</a>
-
-							<br><br>
-							Or, more interested about the planet itself?
-							<a href="/Planet-Gaia-Derinkuyu.html">Lets find out... <span
-									class="fa fa-light fa-solar-system">🌐</span></a>
-
-						</p>
-					</div>
 
 				</div>
 			</div>
@@ -957,21 +830,25 @@
 		</div>
 
 
+
 		<div id="team-page" class="page">
 			<div class="heading">
 				<div class="heading-content">
 					<div class="heading-left heading-side">
-						<img src="/WebAsset/planet.webp" alt="Planet" class="spin planet-spin">
+						<img src="/WebAsset/team logo.webp" alt="Team Kaiyo" class="team-logo">
 
 					</div>
 
 					<div class="heading-right heading-side">
 						<div class="heading-header">
-							<h1 class="heading-header-text">Planet Gaia Derinkuyu</h1>
+							<h1 class="heading-header-text">Team Kaiyo</h1>
 						</div>
 
 						<div class="heading-subheader">
-							<p class="heading-subheader-text">- The life hidden within the dark</p>
+							<p class="heading-subheader-text">
+								A group of passionate individuals working together to explore the unknown, to discover
+								the hidden and to create the unimaginable.
+							</p>
 						</div>
 
 					</div>
@@ -980,7 +857,20 @@
 
 			<div class="body-content">
 				<div class="body-content-text center">
+					<h1 class="text-center">Team Members</h1>
+
 					<div class="team">
+						<div class="member-card">
+							<div class="member-card-top"></div>
+							<div class="member-card-body">
+								<img class="member-image" src="/WebAsset/Ratul.webp" />
+							</div>
+							<div class="member-card-bottom">
+								<div class="member-name">Ratul</div>
+								<div class="member-email">wwwqweasd147@gmail.com</div>
+								<div class="member-role">Team Lead</div>
+							</div>
+						</div>
 						<div class="member-card">
 							<div class="member-card-top"></div>
 							<div class="member-card-body">
@@ -1001,17 +891,6 @@
 								<div class="member-name">Atik</div>
 								<div class="member-email">atik@gmail.com</div>
 								<div class="member-role">Geology Researcher</div>
-							</div>
-						</div>
-						<div class="member-card">
-							<div class="member-card-top"></div>
-							<div class="member-card-body">
-								<img class="member-image" src="/WebAsset/Ratul.webp" />
-							</div>
-							<div class="member-card-bottom">
-								<div class="member-name">Ratul</div>
-								<div class="member-email">wwwqweasd147@gmail.com</div>
-								<div class="member-role">Team Lead</div>
 							</div>
 						</div>
 						<div class="member-card">
@@ -1074,9 +953,9 @@
 	<script src="/?zip_page_script"></script>
 
 
+	<script src="/Scripts/script_page_handler.js"></script>
 	<script src="/Scripts/script_theme.js"></script>
 	<script src="/Scripts/script_error_page.js"></script>
-	<script src="/Scripts/script_page_handler.js"></script>
 
 	<script src="/Scripts/Page_HOME.js"></script>
 	<script src="/Scripts/Page_Planet.js"></script>
