--- a/Solar-System.html
+++ b/Solar-System.html
@@ -880,7 +880,7 @@
 							<div class="member-card-bottom">
 								<div class="member-name">Arka</div>
 								<div class="member-email">parvez6878@gmail.com</div>
-								<div class="member-role">Developer</div>
+								<div class="member-role">3D Designer</div>
 							</div>
 						</div>
 						<div class="member-card">
@@ -924,10 +924,11 @@
 							<div class="member-card-bottom">
 								<div class="member-name">Fatematuz Zohora</div>
 								<div class="member-email">zohura2003@gmail.com</div>
-								<div class="member-role">Developer</div>
+								<div class="member-role">Biology Researcher</div>
 							</div>
 						</div>
 					</div>
+					<h3 class="text-center">Proud students of Faridpur Engineering College</h3>
 				</div>
 			</div>
 
