--- a/Team.html
+++ b/Team.html
@@ -26,6 +26,8 @@
 			'/About.html': 'about',
 			'/Team.html': 'team',
 		}
+		
+		console.log(window.location.pathname)
 		var PAGE_TYPE = types[window.location.pathname];
 
 	</script>
@@ -924,11 +926,10 @@
 							<div class="member-card-bottom">
 								<div class="member-name">Fatematuz Zohora</div>
 								<div class="member-email">zohura2003@gmail.com</div>
-								<div class="member-role">Biology Researcher</div>
+								<div class="member-role">Developer</div>
 							</div>
 						</div>
 					</div>
-					<h3 class="text-center">Proud students of Faridpur Engineering College</h3>
 				</div>
 			</div>
 
