--- a/Planet-Gaia-Derinkuyu.html
+++ b/Planet-Gaia-Derinkuyu.html
@@ -81,7 +81,7 @@
 			</a>
 		</span>
 
-		<span id="nav-bar">
+		<span id="nav-bar" style="display:none">
 			<a href="/index.html" class="nav-bar-link highlight disabled" data-page-type="home">Home</a>
 
 			<a href="/Solar-System.html" class="nav-bar-link" data-page-type="solar_system">Solar System</a>
