--- a/Research.html
+++ b/Research.html
@@ -21,7 +21,7 @@
 			'/': 'home',
 			'/index.html': 'home',
 			'/Explore.html': 'explore',
-			'/Planet-Gaia-Derinkuyu.html': 'planet',
+			'/Research.html': 'planet',
 			'/Life-on-planet.html': 'life',
 			'/About.html': 'about',
 			'/Team.html': 'team',
@@ -87,7 +87,7 @@
 
 			<a href="/Explore.html" class="nav-bar-link" data-page-type="explore">Explore</a>
 
-			<a href="/Planet-Gaia-Derinkuyu.html" class="nav-bar-link" data-page-type="planet">Planet Gaia Derinkuyu</a>
+			<a href="/Research.html" class="nav-bar-link" data-page-type="planet">Research</a>
 
 			<a href="/Life-on-planet.html" class="nav-bar-link" data-page-type="life">Life on Planet</a>
 
@@ -190,6 +190,7 @@
 						</p>
 					</div>
 
+					
 					<!-- Namesake -->
 
 					<div id="namesake-segment">
