--- a/Research.html
+++ b/Research.html
@@ -8,9 +8,9 @@
 	<title>Planet Gaia Derinkuyu</title>
 
 
-	<link rel="stylesheet" href="Styles/style_main.css">
-	<link rel="stylesheet" href="Styles/style_header.css">
-	<link rel="stylesheet" href="Styles/style_sitewide.css">
+	<link rel="stylesheet" href="/Styles/style_main.css">
+	<link rel="stylesheet" href="/Styles/style_header.css">
+	<link rel="stylesheet" href="/Styles/style_sitewide.css">
 </head>
 
 
@@ -26,11 +26,12 @@
 			'/About.html': 'about',
 			'/Team.html': 'team',
 		}
-		
+
 		console.log(window.location.pathname)
 		var PAGE_TYPE = types[window.location.pathname];
 
 	</script>
+
 	<link rel="stylesheet" href="Styles/style_home.css">
 	<link rel="stylesheet" href="Styles/style_team.css">
 	<link rel="stylesheet" href="Styles/style_about.css">
@@ -81,7 +82,7 @@
 			</a>
 		</span>
 
-	
+
 		<span id="nav-bar" style="display:none">
 			<a href="/index.html" class="nav-bar-link highlight disabled" data-page-type="home">Home</a>
 
@@ -162,6 +163,9 @@
 
 						<div class="heading-subheader">
 							<p class="heading-subheader-text">- The life hidden within the dark</p>
+
+							<audio src="/WebAsset/ema/Voice 010.mp3" class="plyr" controls></audio>
+
 						</div>
 
 					</div>
@@ -182,7 +186,8 @@
 							here, but the nature works in a mysterious way under the shed.
 
 							<br>
-							Long distance from its star <a href="/Explore/Solar-System.html" style="color: goldenrod;">"Sidus
+							Long distance from its star <a href="/Explore/Solar-System.html"
+								style="color: goldenrod;">"Sidus
 								Ignis"</a> keeps it cold while the Volcanic surface carry the heat to the deep water
 							body, maintaining the temperature of the planet <i>(300°C at day to -38°C at night)</i>. The
 							planet is also known for its rich minerals and unique combination magnetic and centrifugal
@@ -190,7 +195,7 @@
 						</p>
 					</div>
 
-					
+
 					<!-- Namesake -->
 
 					<div id="namesake-segment">
@@ -407,7 +412,7 @@
 			<div class="body-content">
 				<div class="body-content-text center">
 
-				</div>	
+				</div>
 			</div>
 
 			<div class="footer-content">
@@ -569,12 +574,6 @@
 		onerror="document.getElementById('player').style.maxWidth = '98vw'"></script>
 
 	<script src="/Scripts/script_global.js"></script>
-
-	<script src="/?asset_script"></script>
-	<script src="/?file_list_script"></script>
-	<script src="/?video_page_script"></script>
-	<script src="/?admin_page_script"></script>
-	<script src="/?zip_page_script"></script>
 
 
 	<script src="/Scripts/script_page_handler.js"></script>
