--- a/Explore/hydro-thermal-vent.html
+++ b/Explore/hydro-thermal-vent.html
@@ -26,7 +26,7 @@
 			'/About.html': 'about',
 			'/Team.html': 'team',
 		}
-		
+
 		console.log(window.location.pathname)
 		var PAGE_TYPE = types[window.location.pathname];
 		if (!PAGE_TYPE) {
@@ -80,7 +80,7 @@
 			</a>
 		</span>
 
-	
+
 		<span id="nav-bar" style="display:none">
 			<a href="/index.html" class="nav-bar-link highlight disabled" data-page-type="home">Home</a>
 
@@ -150,17 +150,17 @@
 			<div class="heading">
 				<div class="heading-content">
 					<div class="heading-left heading-side">
-						<img src="/WebAsset/planet.webp" alt="Planet" class="spin planet-spin">
+						<img src="/WebAsset/Explore/hydro-thermal-vent.webp" alt="Planet" class="spin planet-spin">
 
 					</div>
 
 					<div class="heading-right heading-side">
 						<div class="heading-header">
-							<h1 class="heading-header-text">Planet Gaia Derinkuyu</h1>
+							<h1 class="heading-header-text">Hydrothermal Vent</h1>
 						</div>
 
 						<div class="heading-subheader">
-							<p class="heading-subheader-text">- The life hidden within the dark</p>
+							<p class="heading-subheader-text">- source of evergy</p>
 						</div>
 
 					</div>
@@ -181,7 +181,8 @@
 							here, but the nature works in a mysterious way under the shed.
 
 							<br>
-							Long distance from its star <a href="/Explore/Solar-System.html" style="color: goldenrod;">"Sidus
+							Long distance from its star <a href="/Explore/Solar-System.html"
+								style="color: goldenrod;">"Sidus
 								Ignis"</a> keeps it cold while the Volcanic surface carry the heat to the deep water
 							body, maintaining the temperature of the planet <i>(300°C at day to -38°C at night)</i>. The
 							planet is also known for its rich minerals and unique combination magnetic and centrifugal
@@ -189,7 +190,7 @@
 						</p>
 					</div>
 
-					
+
 					<!-- Namesake -->
 
 					<div id="namesake-segment">
@@ -309,259 +310,7 @@
 			</div>
 		</div>
 
-
-		<div id="explore-page" class="page">
-			<div class="heading">
-				<div class="heading-content">
-					<div class="heading-left heading-side">
-						<img src="/WebAsset/planet.webp" alt="Planet" class="spin planet-spin">
-
-					</div>
-
-					<div class="heading-right heading-side">
-						<div class="heading-header">
-							<h1 class="heading-header-text">Planet Gaia Derinkuyu</h1>
-						</div>
-
-						<div class="heading-subheader">
-							<p class="heading-subheader-text">- The life hidden within the dark</p>
-						</div>
-
-					</div>
-				</div>
-			</div>
-
-			<div class="body-content">
-				<div class="body-content-text center">
-
-				</div>
-			</div>
-
-			<div class="footer-content">
-				<div class="footer-content-text">
-					<p>Imagination lies beyond reality, but making it believable is the challenge. All these data are
-						pure fiction and math</p>
-				</div>
-			</div>
-		</div>
-
-
-		<div id="planet-page" class="page">
-			<div class="heading">
-				<div class="heading-content">
-					<div class="heading-left heading-side">
-						<img src="/WebAsset/planet.webp" alt="Planet" class="spin planet-spin">
-
-					</div>
-
-					<div class="heading-right heading-side">
-						<div class="heading-header">
-							<h1 class="heading-header-text">Planet Gaia Derinkuyu</h1>
-						</div>
-
-						<div class="heading-subheader">
-							<p class="heading-subheader-text">- The life hidden within the dark</p>
-						</div>
-
-					</div>
-				</div>
-			</div>
-
-			<div class="body-content">
-				<div class="body-content-text center">
-
-				</div>
-			</div>
-
-			<div class="footer-content">
-				<div class="footer-content-text">
-					<p>Imagination lies beyond reality, but making it believable is the challenge. All these data are
-						pure fiction and math</p>
-				</div>
-			</div>
-		</div>
-
-
-		<div id="life-page" class="page">
-			<div class="heading">
-				<div class="heading-content">
-					<div class="heading-left heading-side">
-						<img src="/WebAsset/planet.webp" alt="Planet" class="spin planet-spin">
-
-					</div>
-
-					<div class="heading-right heading-side">
-						<div class="heading-header">
-							<h1 class="heading-header-text">Planet Gaia Derinkuyu</h1>
-						</div>
-
-						<div class="heading-subheader">
-							<p class="heading-subheader-text">- The life hidden within the dark</p>
-						</div>
-
-					</div>
-				</div>
-			</div>
-
-			<div class="body-content">
-				<div class="body-content-text center">
-
-				</div>	
-			</div>
-
-			<div class="footer-content">
-				<div class="footer-content-text">
-					<p>Imagination lies beyond reality, but making it believable is the challenge. All these data are
-						pure fiction and math</p>
-				</div>
-			</div>
-		</div>
-
-		<div id="about-page" class="page">
-			<div class="heading">
-				<div class="heading-content">
-					<div class="heading-left heading-side">
-						<img src="/WebAsset/space-app.webp" alt="Planet" class="space-logo">
-
-					</div>
-
-					<div class="heading-right heading-side">
-						<div class="heading-header">
-							<h1 class="heading-header-text">Beyond Sunlight: <br> An Aquatic Chemosynthetic World</h1>
-						</div>
-
-						<div class="heading-subheader">
-							<p class="heading-subheader-text">- 2024 NASA Space Apps Challenge</p>
-						</div>
-
-					</div>
-				</div>
-			</div>
-
-			<div class="body-content">
-				<div class="body-content-text center">
-
-				</div>
-			</div>
-
-			<div class="footer-content">
-				<div class="footer-content-text">
-					<p>Imagination lies beyond reality, but making it believable is the challenge. All these data are
-						pure fiction and math</p>
-				</div>
-			</div>
-		</div>
-
-
-
-		<div id="team-page" class="page">
-			<div class="heading">
-				<div class="heading-content">
-					<div class="heading-left heading-side">
-						<img src="/WebAsset/team logo.webp" alt="Team Kaiyo" class="team-logo">
-
-					</div>
-
-					<div class="heading-right heading-side">
-						<div class="heading-header">
-							<h1 class="heading-header-text">Team Kaiyo</h1>
-						</div>
-
-						<div class="heading-subheader">
-							<p class="heading-subheader-text">
-								A group of passionate individuals working together to explore the unknown, to discover
-								the hidden and to create the unimaginable.
-							</p>
-						</div>
-
-					</div>
-				</div>
-			</div>
-
-			<div class="body-content">
-				<div class="body-content-text center">
-					<h1 class="text-center">Team Members</h1>
-
-					<div class="team">
-						<div class="member-card">
-							<div class="member-card-top"></div>
-							<div class="member-card-body">
-								<img class="member-image" src="/WebAsset/Ratul.webp" />
-							</div>
-							<div class="member-card-bottom">
-								<div class="member-name">Ratul</div>
-								<div class="member-email">wwwqweasd147@gmail.com</div>
-								<div class="member-role">Team Lead</div>
-							</div>
-						</div>
-						<div class="member-card">
-							<div class="member-card-top"></div>
-							<div class="member-card-body">
-								<img class="member-image" src="/WebAsset/arko.webp" />
-							</div>
-							<div class="member-card-bottom">
-								<div class="member-name">Arka</div>
-								<div class="member-email">parvez6878@gmail.com</div>
-								<div class="member-role">3D Designer</div>
-							</div>
-						</div>
-						<div class="member-card">
-							<div class="member-card-top"></div>
-							<div class="member-card-body">
-								<img class="member-image" src="/WebAsset/atik.webp" />
-							</div>
-							<div class="member-card-bottom">
-								<div class="member-name">Atik</div>
-								<div class="member-email">atik@gmail.com</div>
-								<div class="member-role">Geology Researcher</div>
-							</div>
-						</div>
-						<div class="member-card">
-							<div class="member-card-top"></div>
-							<div class="member-card-body">
-								<img class="member-image" src="/WebAsset/mehedi.webp" />
-							</div>
-							<div class="member-card-bottom">
-								<div class="member-name">Mehedi Hasan</div>
-								<div class="member-email">mhbhuiyan2004@gmail.com</div>
-								<div class="member-role">Biology Researcher</div>
-							</div>
-						</div>
-						<div class="member-card">
-							<div class="member-card-top"></div>
-							<div class="member-card-body">
-								<img class="member-image" src="/WebAsset/Roudro.webp" />
-							</div>
-							<div class="member-card-bottom">
-								<div class="member-name">Roudra Sarker</div>
-								<div class="member-email">kasroudrakrd@gmail.com</div>
-								<div class="member-role">Web Developer</div>
-							</div>
-						</div>
-						<div class="member-card">
-							<div class="member-card-top"></div>
-							<div class="member-card-body">
-								<img class="member-image" src="/WebAsset/ema.webp" />
-							</div>
-							<div class="member-card-bottom">
-								<div class="member-name">Fatematuz Zohora</div>
-								<div class="member-email">zohura2003@gmail.com</div>
-								<div class="member-role">Developer</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="footer-content">
-				<div class="footer-content-text">
-					<p>Imagination lies beyond reality, but making it believable is the challenge. All these data are
-						pure fiction and math</p>
-				</div>
-			</div>
-		</div>
 	</div>
-
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.0/plyr.min.js" crossorigin="anonymous"
