--- a/Explore.html
+++ b/Explore.html
@@ -32,9 +32,9 @@
 
 	</script>
 
-	<link rel="stylesheet" href="Styles/style_home.css">
-	<link rel="stylesheet" href="Styles/style_team.css">
-	<link rel="stylesheet" href="Styles/style_about.css">
+	<link rel="stylesheet" href="/Styles/style_home.css">
+	<link rel="stylesheet" href="/Styles/style_team.css">
+	<link rel="stylesheet" href="/Styles/style_about.css">
 
 
 	<style>
