--- a/Explore/hydro-thermal-vent.html
+++ b/Explore/hydro-thermal-vent.html
@@ -35,6 +35,7 @@
 	</script>
 
 
+
 	<style>
 		#content_container {
 			display: none;
@@ -150,7 +151,7 @@
 			<div class="heading">
 				<div class="heading-content">
 					<div class="heading-left heading-side">
-						<img src="/WebAsset/Explore/hydro-thermal-vent.webp" alt="Planet" class="spin planet-spin">
+						<img src="/WebAsset/Explore/hydro-thermal-vent.webp" alt="Planet" class="">
 
 					</div>
 
