--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
 	<script src="/Scripts/Page_Life.js"></script>
 	<script src="/Scripts/Page_About.js"></script>
 	<script src="/Scripts/Page_Team.js"></script>
-	<script src="/Scripts/Page_explore.js"></script>
+	<script src="/Scripts/Page_Explore.js"></script>
 
 
 
